@@ -96,6 +96,7 @@ class ttHMultileptonLooseEventSaver : public top::EventSaverFlatNtuple {
   unsigned int m_runNumber;
   unsigned int m_mcChannelNumber;
   float m_mu;
+  float m_mu_unc;
   float m_mu_ac;
   ULong64_t m_pu_hash;
   int m_pvNumber;
