@@ -1,3 +1,6 @@
+2015-07-29 Giuseppe Salamanna <salaman AT cern.ch>
+	* ttHMultileptonLooseEventSaver: PRW hash only for MC. Mu corrected same as Mu default for MC.  
+	
 2015-07-28 Giuseppe Salamanna <salaman AT cern.ch>
 	* ttHMultileptonLooseEventSaver: changes to the purw tool instance here to write out corrected mu (but doeasn't work yet..). 
 	Also add PRWtool Hash to be able to re-generate PU weights with changing mu profile in future
